Corrected config table layout and spacing

--- a/public_html/layouts/basic/styles/components/_Utilities.scss
+++ b/public_html/layouts/basic/styles/components/_Utilities.scss
@@ -365,16 +365,16 @@
 		width: 100%;
 	}
 
-	&-gap-05rem {
-		@include u-column-gap(0.5rem);
+	&-gap-1rem {
+		@include u-column-gap(1rem);
 	}
 
 	&-count-auto {
 		@include u-column-count(auto);
 	}
 
-	&-width-27rem {
-		@include u-column-width(27rem);
+	&-width-36rem {
+		@include u-column-width(36rem);
 	}
 }
 
@@ -393,4 +393,10 @@
 
 .u-position-t-5px {
 	top: calculate-rem(5px);
+}
+
+.u-align-middle-children {
+	* {
+		vertical-align: middle !important;
+	}
 }
